--- a/lib/project/runoptionswidgetbase.ui
+++ b/lib/project/runoptionswidgetbase.ui
@@ -1,4 +1,4 @@
-<!DOCTYPE UI><UI version="3.0" stdsetdef="1">
+<!DOCTYPE UI><UI version="3.1" stdsetdef="1">
 <class>RunOptionsWidgetBase</class>
 <widget class="QWidget">
     <property name="name">
@@ -8,8 +8,8 @@
         <rect>
             <x>0</x>
             <y>0</y>
-            <width>430</width>
-            <height>334</height>
+            <width>625</width>
+            <height>449</height>
         </rect>
     </property>
     <property name="caption">
@@ -86,128 +86,11 @@
         </widget>
         <widget class="QGroupBox">
             <property name="name">
-                <cstring>GroupBox2</cstring>
+                <cstring>env_var_group</cstring>
             </property>
             <property name="title">
                 <string>Environment Variables</string>
             </property>
-            <grid>
-                <property name="name">
-                    <cstring>unnamed</cstring>
-                </property>
-                <property name="margin">
-                    <number>11</number>
-                </property>
-                <property name="spacing">
-                    <number>6</number>
-                </property>
-                <widget class="QListView" row="1" column="0" rowspan="2" colspan="1">
-                    <column>
-                        <property name="text">
-                            <string>Name</string>
-                        </property>
-                        <property name="clickable">
-                            <bool>true</bool>
-                        </property>
-                        <property name="resizeable">
-                            <bool>true</bool>
-                        </property>
-                    </column>
-                    <column>
-                        <property name="text">
-                            <string>Value</string>
-                        </property>
-                        <property name="clickable">
-                            <bool>true</bool>
-                        </property>
-                        <property name="resizeable">
-                            <bool>true</bool>
-                        </property>
-                    </column>
-                    <property name="name">
-                        <cstring>listview</cstring>
-                    </property>
-                    <property name="sizePolicy">
-                        <sizepolicy>
-                            <hsizetype>3</hsizetype>
-                            <vsizetype>7</vsizetype>
-                            <horstretch>0</horstretch>
-                            <verstretch>0</verstretch>
-                        </sizepolicy>
-                    </property>
-                    <property name="showSortIndicator">
-                        <bool>true</bool>
-                    </property>
-                    <property name="resizeMode">
-                        <enum>AllColumns</enum>
-                    </property>
-                </widget>
-                <widget class="QLayoutWidget" row="1" column="1">
-                    <property name="name">
-                        <cstring>Layout2</cstring>
-                    </property>
-                    <vbox>
-                        <property name="name">
-                            <cstring>unnamed</cstring>
-                        </property>
-                        <property name="margin">
-                            <number>0</number>
-                        </property>
-                        <property name="spacing">
-                            <number>6</number>
-                        </property>
-                        <widget class="QPushButton">
-                            <property name="name">
-                                <cstring>addvar_button</cstring>
-                            </property>
-                            <property name="sizePolicy">
-                                <sizepolicy>
-                                    <hsizetype>1</hsizetype>
-                                    <vsizetype>0</vsizetype>
-                                    <horstretch>0</horstretch>
-                                    <verstretch>0</verstretch>
-                                </sizepolicy>
-                            </property>
-                            <property name="text">
-                                <string>Add...</string>
-                            </property>
-                        </widget>
-                        <widget class="QPushButton">
-                            <property name="name">
-                                <cstring>removevar_button</cstring>
-                            </property>
-                            <property name="sizePolicy">
-                                <sizepolicy>
-                                    <hsizetype>5</hsizetype>
-                                    <vsizetype>0</vsizetype>
-                                    <horstretch>0</horstretch>
-                                    <verstretch>0</verstretch>
-                                </sizepolicy>
-                            </property>
-                            <property name="text">
-                                <string>Remove</string>
-                            </property>
-                        </widget>
-                    </vbox>
-                </widget>
-                <spacer row="2" column="1">
-                    <property name="name">
-                        <cstring>Spacer12</cstring>
-                    </property>
-                    <property name="orientation">
-                        <enum>Vertical</enum>
-                    </property>
-                    <property name="sizeType">
-                        <enum>Expanding</enum>
-                    </property>
-                    <property name="sizeHint">
-                        <size>
-                            <width>0</width>
-                            <height>30</height>
-                        </size>
-                    </property>
-                </spacer>
-            </grid>
         </widget>
         <widget class="QCheckBox">
             <property name="name">
@@ -221,18 +104,6 @@
 </widget>
 <connections>
     <connection>
-        <sender>addvar_button</sender>
-        <signal>clicked()</signal>
-        <receiver>run_options_widget</receiver>
-        <slot>addVarClicked()</slot>
-    </connection>
-    <connection>
-        <sender>removevar_button</sender>
-        <signal>clicked()</signal>
-        <receiver>run_options_widget</receiver>
-        <slot>removeVarClicked()</slot>
-    </connection>
-    <connection>
         <sender>browseMainButton</sender>
         <signal>clicked()</signal>
         <receiver>run_options_widget</receiver>
@@ -242,15 +113,10 @@
 <tabstops>
     <tabstop>mainprogram_edit</tabstop>
     <tabstop>progargs_edit</tabstop>
-    <tabstop>listview</tabstop>
-    <tabstop>addvar_button</tabstop>
-    <tabstop>removevar_button</tabstop>
     <tabstop>startinterminal_box</tabstop>
 </tabstops>
 <slots>
-    <slot access="protected">addVarClicked()</slot>
     <slot>browseMainProgram()</slot>
-    <slot access="protected">removeVarClicked()</slot>
 </slots>
 <layoutdefaults spacing="6" margin="11"/>
 </UI>
