finished the "first" version of the new "Add Methods" Wizard.

--- a/parts/cppsupport/addmethoddialogbase.ui
+++ b/parts/cppsupport/addmethoddialogbase.ui
@@ -483,6 +483,12 @@
         <receiver>AddMethodDialogBase</receiver>
         <slot>updateGUI()</slot>
     </connection>
+    <connection>
+        <sender>browseButton</sender>
+        <signal>clicked()</signal>
+        <receiver>AddMethodDialogBase</receiver>
+        <slot>browseImplementationFile()</slot>
+    </connection>
 </connections>
 <tabstops>
     <tabstop>methods</tabstop>
@@ -504,6 +510,7 @@
     <slot>deleteCurrentMethod()</slot>
     <slot>currentChanged(QListViewItem*)</slot>
     <slot>updateGUI()</slot>
+    <slot>browseImplementationFile()</slot>
 </slots>
 <layoutdefaults spacing="6" margin="11"/>
 </UI>
